# sorbet

./: Makefile  README.md  main.py  pyproject.toml  setup.py
sorbet/: __init__.py  fem.py  logging.py  mesh.py  paths.py  post_processing.py  sparsity.py
